Add folder selection handler and Files service stub
Implemented folderTreeView_SelectionChanged to load files when a folder is selected, including async handling and cancellation support. Introduced a Files service with a static FileItems list and a stubbed LoadFiles method. Updated XAML to wire up the new event handler and added necessary threading usings.

--- a/csRenamer/MainWindow.xaml
+++ b/csRenamer/MainWindow.xaml
@@ -75,7 +75,7 @@
                     <!-- Folder Browser TreeView -->
                     <TreeView x:Name="folderTreeView" Width="300" MinWidth="200" MaxWidth="600"
                               ItemInvoked="folderTreeView_ItemInvoked"
-                              Expanding="folderTreeView_Expanding">
+                              Expanding="folderTreeView_Expanding" SelectionChanged="folderTreeView_SelectionChanged">
                         <TreeView.ItemTemplate>
                             <DataTemplate x:DataType="TreeViewNode">
                                 <StackPanel Orientation="Horizontal" Spacing="6">
