--- a/csRenamer/MainWindow.xaml
+++ b/csRenamer/MainWindow.xaml
@@ -103,7 +103,9 @@
                                TargetControl="{x:Bind folderTreeView}" />
 
                     <!-- Data Grid -->
-                    <ListView Grid.Column="2" Margin="5" x:Name="renameGrid" Background="{ThemeResource SmokeFillColorDefaultBrush}"
+                    <ListView Grid.Column="2" Margin="5,0,5,0" x:Name="renameGrid"
+                              Background="{ThemeResource LayerFillColorAltBrush}"
+                              CornerRadius="4"
                               SelectionMode="Extended" IsItemClickEnabled="False">
                         
                         <!-- Header -->
@@ -165,7 +167,7 @@
         </SplitView>
 
         <!-- Status Bar -->
-        <Grid HorizontalAlignment="Stretch" Grid.Row="2" Padding="4,2" Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}">
+        <Grid HorizontalAlignment="Stretch" Grid.Row="2" Padding="4,2" Background="{ThemeResource LayerFillColorAltBrush}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="70"/>
